# pylib7z

./: .clangd  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  README.rst  conftest.py  pyproject.toml  setup.py  tox.ini
ffi7z/: __init__.py  codegen_c.py  codegen_py.py  codegen_shared.py  ffi7z_static.cdef  interfaces.py
ffi7zip/: __init__.py  build_ffi7zip.py  codegen_c.py  codegen_py.py  idlgen.py  interfaces.py
ffi_src/: build_ffi7z.py  ffi7z_static.cdef  idlgen.py  interfaces.py
lib7zip/: __init__.py  _ffi7z_builder.py  archive.old.py  archive.py  cmpcodecsinfo.py  comtypes.py  extract_callback.py  ffi7z.py  ffi7z_com.cdef  ffi7z_com.inl  ffi7z_guid.py  ffi7z_module.cdef  ffi7z_thunk.py  ffi7z_types.py  ffi7zip.pyi  format_registry.py  iids.py  method_registry.py  open_callback.py  propvariant.py  py7ziptypes.py  simplecom.py  stream.py  unknown.py  winhelpers.py  wintypes.py
lib7zip/_ffi/: awful_idl.py  build_ffi7z.py  ffi7z.c  ffi7z_types.cdef
src/lib7z/: __init__.py  archive.py  extract_callback.py  format_registry.py  hresult.py  iids.py  method_registry.py  open_callback.py  stream.py  unknown.py
src/lib7zip/: __init__.py  extract_callback.py  ffi7z.c  ffi7z_com.inl  ffi7z_types.cdef  winhelpers.py
tests/: __init__.py  test_archive.py  test_format_registry.py
what/: awful_idl.py
