[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "cffi",
    "ast-compat ; python_version < '3.9'",
]
build-backend = "setuptools.build_meta"

[project]
name = "lib7z"
authors = [
    { name = "William Ewing", email = "will.ewing.iv@gmail.com" },
    { name = "Mark Harviston", email = "mark.harviston@gmail.com" },
]
maintainers = [{ name = "William Ewing", email = "will.ewing.iv@gmail.com" }]
readme = "README.rst"
license = { file = "LICENSE" }
version = "0.2.0"
dependencies = ["cffi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C",
    "Programming Language :: Python :: 3.8",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["lib7z"]

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py38"]
line-length = 160
